<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cardInfoText"
        android:layout_width="319dp"
        android:layout_height="73dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="Please enter your card information to get access to amazing perks "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardNumberText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:hint="Card number"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardInfoText" />

    <EditText
        android:id="@+id/cardSecurityCodeText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:hint="Security Code"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberText" />

    <EditText
        android:id="@+id/cardNameText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Name on card"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSecurityCodeText" />

    <EditText
        android:id="@+id/cardZipCodeText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="Billing zip code on card"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNameText" />

    <Button
        android:id="@+id/paymentConfirmBtn"
        android:layout_width="158dp"
        android:layout_height="76dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="32dp"
        android:text="I'm ready to become a member (1 month, $5)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reoccuringPaymentBtn" />

    <CheckBox
        android:id="@+id/saveInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:text="Save billing information?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardZipCodeText" />

    <CheckBox
        android:id="@+id/reoccuringPaymentBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:text="Reoccuring Payment?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveInfoBtn" />

    <EditText
        android:id="@+id/expirationDateText"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Expiration Date"
        app:layout_constraintBottom_toTopOf="@+id/cardNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSecurityCodeText"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/returnToDashFromPayment"
        android:layout_width="104dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:text="Return to Dash"
        app:layout_constraintEnd_toStartOf="@+id/paymentConfirmBtn"
        app:layout_constraintTop_toBottomOf="@+id/reoccuringPaymentBtn" />

</android.support.constraint.ConstraintLayout>