<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signupText"
        android:layout_width="291dp"
        android:layout_height="95dp"
        android:layout_marginTop="100dp"
        android:text="To signup, please enter a username, password, your full name, and email below!"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Enter"
        app:layout_constraintStart_toEndOf="@+id/securityCodeText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/signupFullName"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Full Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupFullName" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="291dp"
        android:layout_height="115dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="Thank you for signing up, please enter the security code sent to your email below to authenticate and register"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

    <EditText
        android:id="@+id/securityCodeText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Security Code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <Button
        android:id="@+id/enterBtnLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Register"
        app:layout_constraintStart_toEndOf="@+id/securityCodeText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />
</android.support.constraint.ConstraintLayout>